--- a/src/Parser.WebUI/public/index.html
+++ b/src/Parser.WebUI/public/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="col d-flex flex-column">
               <h4>Parsed JSON</h4>
-              <textarea id="parsed-json" rows="10" class="flex-fill"></textarea>
+              <div id="parsed-json" rows="10" class="flex-fill"></div>
             </div>
           </div>
         </div>
