Better json rendering in webui

--- a/src/Parser.WebUI/src/index.html
+++ b/src/Parser.WebUI/src/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="col d-flex flex-column">
               <h4>Parsed JSON</h4>
-              <pre id="parsed-json" rows="10" class="flex-fill"></pre>
+              <pre id="parsed-json" class="flex-fill"></pre>
             </div>
           </div>
         </div>
